# Search-Engine

./: CMakeLists.txt  README.md
include/: converterJSON.h  invertedIndex.h  searchServer.h
json_files/: answers.json  config.json
resources/: file006.txt
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: CMakeLists.txt  converterJSON_test.cpp  invertedIndex_test.cpp  searchServer_test.cpp
